--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,40 @@
-<h1> Shows posts per user </h1>
+<div class="container bg-gray-900 text-white">
+  <div class="container flex justify-between items-center p-8">
+    <div class="photo-container w-48 h-48 rounded-full overflow-hidden">
+      <img src="<%= @user.photo %>" alt="User Photo" class="object-cover">
+    </div>
+    <div class="info-container border-2 w-2/4 p-7 rounded-lg">
+      <h2 class="text-2xl font-bold"><%= @user.name%></h2>
+      <p class="text-gray-600 text-right">Number of Posts: 10</p>
+    </div>
+  </div>
+  <div class="mt-8">
+  <% @posts.each do |post|%>
+    <div class="border-2 p-4 mb-4 rounded-lg">
+      <a class="text-lg font-bold mb-2 text-blue-400 hover:text-blue-500" href="/users/<%= @user.id %>/posts/<%=post.id%>">Post #'<%=post.id%></a>
+      <p class="text-gray-400 leading-relaxed">
+        <%= post.text %>
+      </p>
+      <div class="flex justify-end mt-4">
+        <span class="text-gray-400 mr-4">
+          Comments: <%= post.comments_counter %>
+        </span>
+        <span class="text-gray-400">
+          Likes: <%= post.likes_counter %>
+        </span>
+      </div>
+      <div class="mt-4">
+        <ul>
+          <% post.five_recent_comments_from_post.each do |comment|%>
+            <li>
+              <p class="border-red-600 p-2">
+                Username: <%= comment.user.name %> Comment: <%= comment.text %>
+              </p>
+            </li>
+          <% end %>
+        </ul>
+      </div>
+    </div>
+  <% end %>
+  </div>
+</div>
