--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,13 @@
-<h1> Blog single post </h1>
+<div class="container bg-gray-800 text-white">
+  <div class="container flex-col justify-between items-center p-8">
+    <h3 class="text-lg font-bold mb-4">Post #'<%=@posts.id %></h3>
+    <p class="text-gray-300"><%=@posts.text%></p>
+  </div>
+  <ul>
+    <% @posts.comments.first(10).each do |comment| %>
+    <li class="bg-gray-700 p-4 rounded-lg mb-4">
+      <p class="text-gray-300">Username: <%= comment.user.name %>, <%= comment.text %></p>
+    </li>
+    <% end %>
+  </ul>
+</div>
