--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
     </div>
     <div class="info-container border-2 w-2/4 p-7 rounded-lg">
       <h2 class="text-2xl font-bold"><%= @user.name%></h2>
-      <p class="text-gray-600 text-right">Number of Posts: <%= @user.posts.count %></p>
+      <p class="text-gray-600 text-right">Number of Posts: <%= @user.posts_counter %></p>
     </div>
   </div>
   <div class="mt-8">
