--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,7 @@
 <div class="container mx-auto px-4">
   <div class="flex justify-between items-center py-8">
     <div class="container mx-auto px-4">
+      <%= link_to "Edit Profile", edit_user_registration_path, class: "btn btn-outline btn-error" %>
       <%= link_to "Back to Users", users_path, class: "btn btn-outline btn-error" %>
       <div class="flex justify-between items-center py-8">
         <div class="photo-container w-48 h-48 rounded-full overflow-hidden">
